Make changes as requested by code reviewer

--- a/about.html
+++ b/about.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script>
-      src="https://kit.fontawesome.com/cb6c5078b1.js"
+  <script src="https://kit.fontawesome.com/cb6c5078b1.js"
       crossorigin="anonymous"
-      </script>
+    ></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
@@ -15,28 +14,29 @@
   <title>About Burning Circle Flight Academy</title>
 </head>
 <body>
-  <div class="top-section">
-    <div class="bar-container">
-    <ul class="bars">
-      <li>
-        <i class="fab fa-facebook-f"></i>
-      </li>
-      <li>
-        <i class="fab fa-twitter"></i>
-      </li>
-      <li>
-        <h4>English</h4>
-      </li>
-      <li>
-        <h4>My Page</h4>
-      </li>
-      <li>
-        <h4>Logout</h4>
-      </li>
-    </ul>
-    </div>
-  </div>
+  
   <header>
+    <aside class="top-section">
+      <div class="bar-container">
+      <ul class="bars">
+        <li>
+          <i class="fab fa-facebook-f"></i>
+        </li>
+        <li>
+          <i class="fab fa-twitter"></i>
+        </li>
+        <li>
+          <h4>English</h4>
+        </li>
+        <li>
+          <h4>My Page</h4>
+        </li>
+        <li>
+          <h4>Logout</h4>
+        </li>
+      </ul>
+      </div>
+    </aside>
     <div class="navbar">
         <div class="logo-DT">
           <a href="index.html"><img src="images/plane3.svg" alt="plane" class="plane"></a>
@@ -73,7 +73,7 @@
             </li>
           </ul>
           <div class="company">
-            <a href="index.html">Back to Home Page</a>
+            <a href="index.html">Burning Circle</a>
           </div>
         </nav>
     </div>
@@ -108,6 +108,7 @@
       <hr>
       <p class="mobile-para">This will be the very first Airshow event to be hosted by Burning circle Flight academy the event will run from November 14th - 18th, so your full particpation and support will be appreciated.</p>
       <p class='desktop-para'> This will be the very first Airshow event to be hosted by Burning circle Flight academy the event will run from November 14th - 18th, so your full particpation and support will be appreciated.</p>
+      <img src="images/plane3.svg" alt="plane" class="plane">
     </div>
     <hr class="horizontal-line">
       
@@ -124,6 +125,28 @@
     </div>
     </div>
   </section>
+  <section class="partners-section" id="partners">
+    <h2 class="partners-heading"><strong>Partners</strong></h2>
+    <hr />
+    <div class="partners-flex">
+      <div class="partners-list">
+        <img class="partner-image" src="images/partner1.png" alt="" />
+      </div>
+      <div class="partners-list">
+        <img class="partner-image" src="images/partner2.png" alt="" />
+      </div>
+      <div class="partners-list">
+        <img class="partner-image" src="images/partner3.png" alt="" />
+      </div>
+      <div class="partners-list">
+        <img class="partner-image" src="images/partner4.png" alt="" />
+      </div>
+      <div class="partners-list">
+        <img class="partner-image" src="images/partner5.png" alt="" />
+      </div>
+    </div>
+  </section>
+
 
   <footer>
     <div class="footer-flex">
