--- a/index.html
+++ b/index.html
@@ -13,28 +13,29 @@
     <title>The Burning Circle Airshow 2021</title>
   </head>
   <body>
-    <div class="top-section">
-      <div class="bar-container">
-        <ul class="bars">
-          <li>
-            <i class="fab fa-facebook-f"></i>
-          </li>
-          <li>
-            <i class="fab fa-twitter"></i>
-          </li>
-          <li>
-            <h4>English</h4>
-          </li>
-          <li>
-            <h4>My Page</h4>
-          </li>
-          <li>
-            <h4>Logout</h4>
-          </li>
-        </ul>
-      </div>
-    </div>
+   
     <header>
+      <aside class="top-section">
+        <div class="bar-container">
+          <ul class="bars">
+            <li>
+              <i class="fab fa-facebook-f"></i>
+            </li>
+            <li>
+              <i class="fab fa-twitter"></i>
+            </li>
+            <li>
+              <h4>English</h4>
+            </li>
+            <li>
+              <h4>My Page</h4>
+            </li>
+            <li>
+              <h4>Logout</h4>
+            </li>
+          </ul>
+        </div>
+      </aside>
       <div class="navbar">
         <div class="logo-DT">
           <a href="index.html"
@@ -106,7 +107,7 @@
         <hr />
         <div class="program">
           <div class="pilot-training stacks">
-            <img class="icons" src="images/program1.png" alt="" />
+            <img class="icons" src="images/program1.png" alt="Pilot Training" />
             <h2>Pilot Training</h2>
             <p>
               Accelerated Pilot Programs. Start your Training Now! FAA Approved
@@ -115,7 +116,7 @@
           </div>
 
           <div class="tech stacks">
-            <img class="icons" src="images/program2.png" alt="" />
+            <img class="icons" src="images/program2.png" alt="techzone" />
             <h2>Tech Zone</h2>
             <p>
               Experience the future of aviation at the new Tech Zone – a
@@ -124,7 +125,7 @@
           </div>
 
           <div class="aircraft stacks">
-            <img class="icons" src="images/program3.png" alt="" />
+            <img class="icons" src="images/program3.png" alt="aircraftdisplay" />
             <h2>Aircraft Display</h2>
             <p>
               One of the biggest highlights of the show, this will feature the
@@ -133,7 +134,7 @@
           </div>
 
           <div class="mentorship stacks">
-            <img class="icons" src="images/program4.png" alt="" />
+            <img class="icons" src="images/program4.png" alt="mentorship" />
             <h2>Mentoring</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
@@ -142,7 +143,7 @@
           </div>
 
           <div class="forum stacks">
-            <img class="icons" src="images/program5.png" alt="" />
+            <img class="icons" src="images/program5.png" alt="forum" />
             <h2>Forum</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt,
@@ -158,6 +159,7 @@
     <div class="section-speakers-heading">
       <h2>Featured Speakers</h2>
       <hr />
+      <div id="speakers"></div>
     </div>
 
     <section class="partners-section" id="partners">
@@ -165,19 +167,19 @@
       <hr />
       <div class="partners-flex">
         <div class="partners-list">
-          <img class="partner-image" src="images/partner1.png" alt="" />
+          <img class="partner-image" src="images/partner1.png" alt="mozilla" />
         </div>
         <div class="partners-list">
-          <img class="partner-image" src="images/partner2.png" alt="" />
+          <img class="partner-image" src="images/partner2.png" alt="Google" />
         </div>
         <div class="partners-list">
-          <img class="partner-image" src="images/partner3.png" alt="" />
+          <img class="partner-image" src="images/partner3.png" alt="Naver" />
         </div>
         <div class="partners-list">
-          <img class="partner-image" src="images/partner4.png" alt="" />
+          <img class="partner-image" src="images/partner4.png" alt="kakao" />
         </div>
         <div class="partners-list">
-          <img class="partner-image" src="images/partner5.png" alt="" />
+          <img class="partner-image" src="images/partner5.png" alt="airbnb" />
         </div>
       </div>
     </section>
