--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <body>
    
     <header>
-      <aside class="top-section">
-        <div class="bar-container">
+      <div class="top-section">
           <ul class="bars">
             <li>
               <i class="fab fa-facebook-f"></i>
@@ -35,7 +34,6 @@
             </li>
           </ul>
         </div>
-      </aside>
       <div class="navbar">
         <div class="logo-DT">
           <a href="index.html"
