--- a/about.html
+++ b/about.html
@@ -130,19 +130,19 @@
     <hr />
     <div class="partners-flex">
       <div class="partners-list">
-        <img class="partner-image" src="images/partner1.png" alt="" />
+        <img class="partner-image" src="images/partner1.png" alt="mozilla" />
       </div>
       <div class="partners-list">
-        <img class="partner-image" src="images/partner2.png" alt="" />
+        <img class="partner-image" src="images/partner2.png" alt="Google" />
       </div>
       <div class="partners-list">
-        <img class="partner-image" src="images/partner3.png" alt="" />
+        <img class="partner-image" src="images/partner3.png" alt="Naver" />
       </div>
       <div class="partners-list">
-        <img class="partner-image" src="images/partner4.png" alt="" />
+        <img class="partner-image" src="images/partner4.png" alt="kakao" />
       </div>
       <div class="partners-list">
-        <img class="partner-image" src="images/partner5.png" alt="" />
+        <img class="partner-image" src="images/partner5.png" alt="airbnb" />
       </div>
     </div>
   </section>
