--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
     </section>
 
-    <section class="section-two">
+    <section class="section-two" id="program">
       <div class="section-two-container">
         <h2 class="heading2">Main Program</h2>
         <hr />
@@ -154,10 +154,10 @@
         </div>
       </div>
     </section>
-    <div class="section-speakers-heading">
+    <div class="section-speakers-heading" id="featured">
       <h2>Featured Speakers</h2>
       <hr />
-      <div id="speakers"></div>
+      <div class="people" id="speakers"></div>
     </div>
 
     <section class="partners-section" id="partners">
