Update about.html as requested by code review

--- a/about.html
+++ b/about.html
@@ -102,29 +102,31 @@
     </div>
   </section>
 
-  <section>
-    <div class="flex-content">
+  <section class="flex-content">
       <h2> The Burning Circle Flight Academy Airshow</h2>
       <hr>
       <p class="mobile-para">This will be the very first Airshow event to be hosted by Burning circle Flight academy the event will run from November 14th - 18th, so your full particpation and support will be appreciated.</p>
       <p class='desktop-para'> This will be the very first Airshow event to be hosted by Burning circle Flight academy the event will run from November 14th - 18th, so your full particpation and support will be appreciated.</p>
       <img src="images/plane3.svg" alt="plane" class="plane">
-    </div>
-    <hr class="horizontal-line">
-      
+    <hr class="horizontal-line">   
   </section>
 
-  <section class="past-section">
-    <div class="past-section-container flex-past">
+    <section class="past-section-container flex-past">
       <h2>Past Airshow events</h2>
       <hr>
       <p>Take a look at the past airshows we attended and what inspired us to host our own Airshow event as a Pilot training institution.</p>
-      <div class="pics">
-      <img src="images/airshow1.jpeg" alt="Dubai airshow2019">
-      <img src="images/airshow2.jpeg" alt="Dubai airshow2020">
-    </div>
+    <div class="events">
+      <div class="event">
+        <h2>2020</h2>
+        <h3 class="paragraph2">The Dubai Aishow 2020 United Arab Emirates</h3>
+      </div>
+      <div class="event">
+        <h2>2019</h2>
+        <h3 class="paragraph2">The Dubai Aishow 2019 United Arab Emirates</h3>
+      </div>
     </div>
   </section>
+
   <section class="partners-section" id="partners">
     <h2 class="partners-heading"><strong>Partners</strong></h2>
     <hr />
